--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* TODO establecer variables */
+:root {
+  --ff-main: system-ui;
+}
 /* CSS RESET */
 *,
 *::before,
@@ -28,6 +31,9 @@ video {
 }
 
 /* Estilos genéricos */
+body {
+  font-family: var(--ff-main);
+}
 
 /* Estilos específicos */
 .main-header {
@@ -53,15 +59,6 @@ video {
   margin: 5rem 2rem;
   transition: all 250ms;
   z-index: -1;
-}
-
-@keyframes slideUp {
-  from {
-    bottom: 0%;
-  }
-  to {
-    bottom: 100%;
-  }
 }
 
 /* utility classes */
