--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
 /* Estilos específicos */
 .main-header {
   padding: 1.5rem 2rem;
@@ -74,6 +75,12 @@ a {
   margin-top: 4rem;
   border-bottom: 1px solid black;
   width: calc(100% - 4rem);
+}
+
+.search-bar {
+  padding: 0.5rem 1rem;
+  border-radius: 32px;
+  border-color: var(--txt-accent-color);
 }
 
 .menu-container {
@@ -115,9 +122,14 @@ a {
 }
 
 .trending-container h2 {
-  border: 1px solid black;
-  border-radius: 6px;
+  border: 2px inset var(--txt-accent-color);
+  border-radius: 32px;
   padding: 0.5rem 1rem;
+  transition: border-style 500ms ease-in-out;
+}
+
+.trending-container h2:hover {
+  border-style: solid;
 }
 
 .switch-tema {
