--- a/style.css
+++ b/style.css
@@ -153,18 +153,12 @@ a {
   padding-bottom: 1rem;
 }
 
-.interaction-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-}
-
 .interaction {
-  padding: 0.5rem 1.5rem;
+  padding-block: 0.75rem;
   font-size: 1.25rem;
   transition: 200ms ease-in-out;
   cursor: pointer;
-  width: 7rem;
+  width: 4rem;
 }
 
 .interaction:hover {
