--- a/style.css
+++ b/style.css
@@ -153,15 +153,25 @@ a {
   padding-bottom: 1rem;
 }
 
+.post-content {
+  position: relative;
+}
+
 .interaction {
-  padding-block: 0.75rem;
   font-size: 1.25rem;
   transition: 200ms ease-in-out;
   cursor: pointer;
-  width: 3em;
+  width: 2em;
   position: absolute;
-  top: 0.1rem;
-  right: 2rem;
+  bottom: -3rem;
+  right: 1rem;
+}
+
+.more {
+  color: var(--txt-accent-color);
+  font-weight: 500;
+  position: absolute;
+  bottom: -2.5rem;
 }
 
 .interaction:hover {
