--- a/style.css
+++ b/style.css
@@ -148,9 +148,8 @@ a {
 }
 
 .post h2 {
-  font-size: 2.5rem;
+  font-size: 14pt;
   font-weight: 600;
-  line-height: 3rem;
   padding-bottom: 1rem;
 }
 
@@ -198,4 +197,7 @@ a {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
+  font-size: 18pt;
+  background-color: white;
+  border: none;
 }
