--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ a {
 
 .post-content {
   position: relative;
+  margin-bottom: 3rem;
 }
 
 .interaction {
@@ -197,7 +198,7 @@ a {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  background-color: var(--bg-color);
+  background-color: rgb(0 0 0 / 0);
   border: 0;
   width: 3em;
   transition: 250ms ease-in-out;
