--- a/style.css
+++ b/style.css
@@ -2,19 +2,15 @@
 :root {
   --ff-main: system-ui;
 
-  --main-color: ;
-  --accent-color: ;
-  --bg-color: white;
-  --bg-color: rgb(255, 255, 255);
-
+  --bg-color: rgb(76 202 240 / 0.5);
+  --accent-color: rgb(76 202 240 / 0.95);
   --txt-accent-color: #f72585;
 }
 
 .dark {
-  --main-color: ;
-  --accent-color: ;
-  --bg-color: #343a40;
-  --txt-accent-color: #f72585;
+  --bg-color: rgba(60, 60, 77, 0.95);
+  --accent-color: rgba(46, 46, 59, 0.95);
+  color: rgb(252, 245, 245);
 }
 
 /* CSS RESET */
@@ -50,11 +46,16 @@ body {
   font-family: var(--ff-main);
   position: relative;
   background-color: var(--bg-color);
+  transition: 250ms ease-in-out;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+img {
+  width: 100%;
 }
 
 /* utility classes */
@@ -83,8 +84,8 @@ a {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: var(--bg-color);
-  box-shadow: 0 2rem 2rem var(--bg-color);
+  background-color: var(--accent-color);
+  box-shadow: 0 2rem 2em 1rem var(--accent-color);
   z-index: 999;
 }
 
@@ -101,12 +102,39 @@ a {
   width: 14rem;
 }
 
+.logo-small {
+  width: 2rem;
+  display: none;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 700px) {
+  .logo {
+    display: none;
+  }
+  .logo-small {
+    display: block;
+  }
+}
+
 .search-bar {
   padding: 0.5rem 1rem;
   border-radius: 32px;
   border-color: var(--txt-accent-color);
   box-shadow: 0.5rem 0.5rem black;
   transform: translateX(-35%);
+}
+
+@media screen and (max-width: 700px) {
+  .search-bar {
+    position: absolute;
+    width: 4rem;
+    right: 30%;
+    transition: 250ms ease-in-out;
+  }
+  .search-bar:focus-within {
+    width: 30%;
+  }
 }
 
 .menu-container {
@@ -118,44 +146,104 @@ a {
   padding: 1rem;
   bottom: 1rem;
   left: 1rem;
+  z-index: 1;
 }
 
 .menu-btn {
   font-size: 1.25rem;
+  font-weight: 600;
   cursor: pointer;
   width: 50%;
   padding-block: 0.5rem;
 }
-
 .menu-content {
   margin: 5rem 2rem;
   transition: all 250ms;
   z-index: -1;
 }
 
+@media screen and (max-width: 700px) {
+  .menu-btn {
+    color: rgb(0 0 0 / 0);
+    width: 100%;
+    transition: ease-in-out 250ms;
+  }
+
+  .menu-btn-extend {
+    width: 80svw;
+    height: 50svh;
+    transform: translateX(40%);
+  }
+
+  .menu-content {
+    position: absolute;
+    z-index: 999;
+    color: black;
+    left: 1rem;
+  }
+}
+
+.menu-content h2 {
+  box-shadow: 0.5rem 0.5rem black;
+  cursor: pointer;
+  border: 2px inset var(--txt-accent-color);
+  border-radius: 32px;
+  padding: 0.75rem 1.25rem;
+  background-color: white;
+  color: black;
+  font-size: 1.25;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.menu-content :not(h2) {
+  font-weight: 700;
+  list-style: none;
+  margin-left: 0.5rem;
+}
+
 .post-container {
   margin-inline: auto;
   margin-top: 7%;
-  width: 40svw;
+  width: 50svw;
   height: min-content;
   border: 2px solid black;
   border-radius: 32px;
 }
 
+@media screen and (max-width: 700px) {
+  .post-container {
+    width: 90svw;
+    margin-top: 35%;
+  }
+}
+
 .post {
   margin-bottom: 2rem;
   padding: 1rem;
+  background-color: rgb(var(--bg-color) / 0.329);
+}
+
+.post-container > :first-child {
+  border-radius: 32px 32px 0 0;
 }
 
 .post h2 {
-  font-size: 14pt;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 700;
   padding-bottom: 1rem;
 }
 
 .post-content {
   position: relative;
   margin-bottom: 3rem;
+}
+
+.post-img {
+  margin-inline: auto;
+  max-width: 50%;
+  border-radius: 32px;
+  box-shadow: 0.5rem 0.5rem black;
 }
 
 .interaction {
@@ -166,11 +254,13 @@ a {
   position: absolute;
   bottom: -3rem;
   right: 1rem;
+  box-shadow: 0.5rem 0.5rem black;
+  border-radius: 6px;
 }
 
 .more {
   color: var(--txt-accent-color);
-  font-weight: 500;
+  font-weight: 600;
   position: absolute;
   bottom: -2.5rem;
 }
@@ -182,21 +272,70 @@ a {
 .trending-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   position: fixed;
   top: 20%;
   right: 5%;
+  gap: 1rem;
 }
 
 .trending-container h2 {
   border: 2px inset var(--txt-accent-color);
   border-radius: 32px;
   padding: 0.5rem 1rem;
+  box-shadow: 0.5rem 0.5rem black;
+  background-color: white;
+  color: black;
+}
+
+.trending-container > :not(h2) {
+  font-weight: 700;
+}
+
+.trending-small-button {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .trending-container {
+    transform: translateX(150%);
+    visibility: hidden;
+    transition: 250ms ease-in-out;
+  }
+
+  .trending-container::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -1rem;
+    transform: translateX(50%);
+    z-index: -1;
+    background-color: var(--txt-accent-color);
+    width: 2000svw;
+    height: 120%;
+    opacity: 0.75;
+  }
+  .trending-small-button {
+    display: block;
+    position: fixed;
+    width: 1.5rem;
+    height: 5rem;
+    top: 35%;
+    right: 0;
+    background-color: var(--txt-accent-color);
+    border-radius: 8px 0 0 8px;
+    z-index: 99;
+  }
+
+  .visible {
+    transform: translateX(-50%);
+    visibility: visible;
+  }
 }
 
 .switch-tema {
   position: fixed;
-  bottom: 1rem;
+  bottom: 1.75rem;
   right: 1rem;
   background-color: rgb(0 0 0 / 0);
   border: 0;
