--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ img {
   width: 100%;
 }
 
+h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  padding-bottom: 1rem;
+}
 /* utility classes */
 .hidden {
   transform: translateY(50%) scaleY(0);
