--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ h1 {
 }
 
 @media screen and (max-width: 700px) {
+  .main-header {
+    box-shadow: 0 0.25rem 2rem 0.25rem var(--accent-color);
+  }
+
   .logo {
     display: none;
   }
@@ -219,7 +223,7 @@ h1 {
 @media screen and (max-width: 700px) {
   .post-container {
     width: 90svw;
-    margin-top: 35%;
+    margin-top: 40%;
   }
 }
 
@@ -351,4 +355,20 @@ h1 {
 
 .switch-tema:hover {
   transform: rotate(180deg);
+}
+
+.volver {
+  border-radius: 32px !important;
+  background-color: white;
+  color: black;
+  font-weight: 600;
+  position: absolute;
+  top: 3rem;
+  left: 8.5rem;
+}
+
+@media screen and (max-width: 700px) {
+  .volver {
+    top: -4rem;
+  }
 }
