--- a/style.css
+++ b/style.css
@@ -348,13 +348,23 @@ h1 {
   right: 1rem;
   background-color: rgb(0 0 0 / 0);
   border: 0;
-  width: 3em;
+  width: 3rem;
   transition: 250ms ease-in-out;
   cursor: pointer;
+  transform: rotate(10deg);
+}
+.switch-tema:hover {
+  transform: rotate(190deg);
 }
 
-.switch-tema:hover {
-  transform: rotate(180deg);
+.switch-tema::before {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 3rem;
+  height: 3rem;
+  box-shadow: 0.25rem 0.25rem black;
+  border-radius: 32px;
 }
 
 .volver {
@@ -375,7 +385,15 @@ h1 {
 
 .reply-content {
   margin-block: 2rem 6rem;
+  margin-inline: auto;
   padding-inline: 1rem;
+  width: 50svw;
+}
+
+@media screen and (max-width: 700px) {
+  .reply-content {
+    width: auto;
+  }
 }
 
 .reply-content h2 {
